--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
 		"@mui/material": "^5.9.0",
 		"@mui/x-data-grid": "^5.14.0",
 		"@reduxjs/toolkit": "^1.8.3",
-		"firebase": "^9.9.0",
-		"firebaseui": "^6.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
-		"redux-toolkit-optimistic": "^1.0.1",
-		"web-vitals": "^2.1.4"
+		"react-scripts": "5.0.1"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^14.3.0",
 		"@types/jest": "^28.1.6",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
@@ -41,7 +36,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "react-scripts build && npm run tailwind",
 		"test": "react-scripts test",
 		"test:debug": "node --nolazy --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --colors --verbose",
 		"eject": "react-scripts eject",
